rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__with_rolling_window__rolling_and_add_group_by.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/with_rolling_window.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_7d | orders__amount_by_id
-----------------------+------------------------+---------------------
2024-01-01 00:00:00    | NULL                   | NULL                
2024-01-02 00:00:00    | NULL                   | NULL                
2024-01-03 00:00:00    | NULL                   | NULL                
2024-01-04 00:00:00    | NULL                   | NULL                
2024-01-05 00:00:00    | NULL                   | 100.00              
2024-01-06 00:00:00    | 100.00                 | NULL                
2024-01-07 00:00:00    | 100.00                 | NULL                
2024-01-08 00:00:00    | 100.00                 | NULL                
2024-01-09 00:00:00    | 100.00                 | NULL                
2024-01-10 00:00:00    | 100.00                 | 200.00              
2024-01-11 00:00:00    | 300.00                 | NULL                
2024-01-12 00:00:00    | 300.00                 | NULL                
2024-01-13 00:00:00    | 200.00                 | NULL                
2024-01-14 00:00:00    | 200.00                 | NULL                
2024-01-15 00:00:00    | 200.00                 | 120.00              
2024-01-16 00:00:00    | 320.00                 | NULL                
2024-01-17 00:00:00    | 320.00                 | NULL                
2024-01-18 00:00:00    | 120.00                 | NULL                
2024-01-19 00:00:00    | 120.00                 | NULL                
2024-01-20 00:00:00    | 120.00                 | 50.00               
2024-01-21 00:00:00    | 170.00                 | NULL                
2024-01-22 00:00:00    | 170.00                 | NULL                
2024-01-23 00:00:00    | 50.00                  | NULL                
2024-01-24 00:00:00    | 50.00                  | NULL                
2024-01-25 00:00:00    | 50.00                  | 30.00               
2024-01-26 00:00:00    | 80.00                  | NULL                
2024-01-27 00:00:00    | 80.00                  | NULL                
2024-01-28 00:00:00    | 30.00                  | NULL                
2024-01-29 00:00:00    | 30.00                  | NULL                
2024-01-30 00:00:00    | 30.00                  | NULL                
2024-01-31 00:00:00    | 30.00                  | NULL
