rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__with_rolling_window__rolling_multi_stage_add_group_by_leaf_and_parent.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/with_rolling_window.rs
expression: result
---
orders__created_at_month | orders__rolling_leaf_own_reduce
-------------------------+--------------------------------
2024-01-01 00:00:00      | 500.00                         
2024-02-01 00:00:00      | 1250.00                        
2024-03-01 00:00:00      | 2250.00
