rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__with_rolling_window__rolling_window_under_reduce_by_time.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/with_rolling_window.rs
expression: result
---
orders__category | orders__created_at_day | orders__rolling_sum_7d_reduce_time
-----------------+------------------------+-----------------------------------
electronics      | 2024-01-06 00:00:00    | 500.00                            
electronics      | 2024-01-07 00:00:00    | 500.00                            
electronics      | 2024-01-08 00:00:00    | 500.00                            
electronics      | 2024-01-09 00:00:00    | 500.00                            
electronics      | 2024-01-10 00:00:00    | 500.00                            
NULL             | 2024-01-01 00:00:00    | NULL                              
NULL             | 2024-01-02 00:00:00    | NULL                              
NULL             | 2024-01-03 00:00:00    | NULL                              
NULL             | 2024-01-04 00:00:00    | NULL                              
NULL             | 2024-01-05 00:00:00    | NULL
